<resources>
    <string name="app_name">I    N    S    T    Y    L    E</string>

    <!--Application Login/Create Account/Account Settings Screens-->
    <string name="greeting">Hello</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="delete_account_dialog_title">DELETE YOUR ACCOUNT?</string>
    <string name="delete_account_dialog_message">Click OK to permanently delete your user account and all fitness data.</string>

    <!--The string below is used both in the login screen as well as the create account screen-->
    <string name="btn_link_create_account">Create Account</string>

    <string name="title_activity_create_account">Create a user account to get started creating your fitness profile and tracking your fitness!</string>

    <string name="title_activity_account_settings">Manage your user account data below:</string>
    <string name="btn_update_account">Update Account</string>
    <string name="btn_delete_account">Delete Account</string>

    <!--Main Dashboard-->
    <string name="btn_generic">Button</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>

    <!--Fitness Details-->

    <!--Fitness Details Headers-->
    <string name="calories">Daily Caloric Intake</string>
    <string name="bmr">Basal Metabolic Rate (BMR)</string>
    <string name="bmi">Body Mass Index (BMI)</string>
    <string name="steps">Daily Step Count</string>

    <!--Fitness Details TextView Placeholders-->
    <string name="tv_bmr">BMR placeholder</string>
    <string name="tv_calPerDay">Calories placeholder</string>
    <string name="tv_bmi">BMI placeholder</string>
    <string name="tv_steps">Steps placeholder</string>


    <!--Profile entry-->
    <string name="hint_fname">FIRST NAME</string>
    <string name="hint_lname">LAST NAME</string>
    <string name="hint_sex">SEX</string>
    <string name="hint_feet">ft</string>
    <string name="hint_inches">in</string>
    <string name="hint_weight">lbs</string>
    <string name="hint_city">CITY NAME</string>
    <string name="hint_country">COUNTRY NAME</string>
    <string name="btn_done">Done</string>
    <string name="btn_img_description_profile_image">Take a profile picture</string>
    <string name="hint_dob">Select DOB</string>
    <string name="hint_lifestyle">ACTIVITY LEVEL</string>
    <string name="hint_wGoal">WEIGHT GOAL</string>

    <string name="title_activity_fitness">FITNESS</string>
    <string name="txtv_ft_symbol">ft</string>
    <string name="txtv_in_symbol">in</string>
    <string name="txtv_lbs_symbol">lbs</string>

    <!--Alert Dialog-->
    <string name="dialog_title_profile_image_button">ADD A PROFILE IMAGE?</string>
    <string name="dialog_message_profile_image_button">Select an option to set a profile photo.</string>

    <string name="dialog_button_file_picker">SELECT EXISTING IMAGE</string>
    <string name="dialog_button_camera">TAKE A PHOTO</string>
    <string name="dialog_button_dismiss">DISMISS</string>



    <!--Green Headers on Profile Entry/Summary Pages-->
    <string name="txtv_label_location">LOCATION</string>
    <string name="txtv_label_fitness">FITNESS/LIFESTYLE DATA</string>
    <string name="txtv_label_lifestyle">LIFESTYLE</string>
    <string name="txtv_label_goal">WEIGHT GOAL</string>

    <string name="btn_radio_sedentary">SEDENTARY</string>
    <string name="btn_radio_active">ACTIVE</string>
    <string name="btn_radio_moderate">MODERATE</string>
    <string name="btn_radio_maintain">MAINTAIN</string>
    <string name="btn_radio_loose">LOSE</string>
    <string name="btn_radio_gain">GAIN</string>

    <string name="btn_edit_fitness_profile">EDIT FITNESS PROFILE</string>

    <!--Profile Summary-->
    <string name="hint_wkly_goal">lbs/wk</string>
    <!--Alert Dialog-->
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_title">CREATE A FITNESS PROFILE?</string>
    <string name="dialog_message">"You do not have a fitness profile yet. Click OK to create your fitness profile."</string>
    <!--Hiking-->
    <string name="title_activity_hiking">Hiking</string>
    <string name="hiking_current_location">Location</string>

    <!--Weather-->
    <string name="title_activity_weather">LOCAL WEATHER</string>
    <string name="title_weather_widget">CURRENT FORECAST</string>
    <string name="current_conditions_weather_widget">CURRENT CONDITIONS: </string>
    <string name="forecast_detail_weather_widget">FORECAST: </string>

    <string name="temp_weather_widget">TEMPERATURE: </string>
    <string name="temp_min_weather_widget">MIN: </string>
    <string name="temp_max_weather_widget">MAX: </string>
    <string name="humidity_weather_widget">HUMIDITY: </string>
    <string name="pressure_weather_widget">PRESSURE: </string>
    <string name="wind_weather_widget">WIND SPEED: </string>
</resources>