<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_account_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountSettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:maxWidth="575dp"
        android:minWidth="325dp"
        android:padding="16dp"
        android:elevation="8dp"
        android:background="@drawable/rectshape"
        android:backgroundTint="@color/widget_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_update_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:textSize="22sp"
        android:text="@string/title_activity_account_settings"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_activity_account_settings"/>

    <EditText
        android:id="@+id/text_email_update_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:breakStrategy="simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_update_account_title" />

    <EditText
        android:id="@+id/text_password_update_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_update_account" />

    <EditText
        android:id="@+id/text_first_name_update_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_fname"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_update_account" />

    <EditText
        android:id="@+id/text_last_name_update_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_lname"
        android:inputType="textPersonName"
        android:layout_marginVertical="12dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_first_name_update_account" />

    <Button
        android:id="@+id/btn_update_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginHorizontal="32dp"
        android:padding="8dp"
        android:text="@string/btn_update_account"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:textSize="16sp"
        android:background="@drawable/rectshape"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_last_name_update_account"
        tools:text="@string/btn_update_account" />

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginHorizontal="32dp"
        android:padding="8dp"
        android:text="@string/btn_delete_account"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:textSize="16sp"
        android:background="@drawable/rectshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_account"
        tools:text="@string/btn_delete_account" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

