<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_fitness_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_centerInParent="true"
    tools:context=".fragments.FitnessDetailsFragment">

    <!--<ScrollView-->
        <!--android:id="@+id/scrollV_profile"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:maxWidth="650dp"-->
        <!--android:fadeScrollbars="true"-->
        <!--android:scrollbarAlwaysDrawVerticalTrack="false"-->
        <!--android:scrollIndicators="none"-->
        <!--android:scrollbarStyle="insideInset"-->
        <!--android:scrollbarThumbVertical="@drawable/seekbar_thumb"-->
        <!--scr-->
        <!--android:background="@android:color/transparent"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent">-->

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="650dp"
            android:minWidth="300dp"
            android:padding="8dp"
            android:layout_margin="0dp"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/fitness_details_main_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="45sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal"
                android:textIsSelectable="false"
                android:autoSizeMaxTextSize="80sp"
                android:text="WELCOME"
                android:textAlignment="center"
                android:layout_marginBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.247"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fitness_details_sub_header"/>

            <TextView
                android:id="@+id/fitness_details_sub_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="32sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal"
                android:textIsSelectable="false"
                android:text="YOUR FITNESS DETAILS"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.247"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fitness_details_main_header"
                app:layout_constraintBottom_toTopOf="@id/tv_header_fitness_details_calories"/>

            <!--Fitness details headings -->

            <TextView
                android:id="@+id/tv_header_fitness_details_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/calories"
                android:textSize="@dimen/dashboard_fitness_details_heading"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:paddingTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fitness_details_main_header" />

            <TextView
                android:id="@+id/tv_header_fitness_details_bmr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAllCaps="true"
                android:text="@string/bmr"
                android:textSize="@dimen/dashboard_fitness_details_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_calPerDay" />


            <TextView
                android:id="@+id/tv_header_fitness_details_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/bmi"
                android:textAllCaps="true"
                android:textSize="@dimen/dashboard_fitness_details_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_BMR" />

            <TextView
                android:id="@+id/tv_header_fitness_details_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/steps"
                android:textAllCaps="true"
                android:textSize="@dimen/dashboard_fitness_details_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bmi" />


            <!--Fitness details user data-->
            <TextView
                android:id="@+id/tv_calPerDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_fitness_details_calories"
                tools:text="@string/tv_calPerDay" />

            <TextView
                android:id="@+id/tv_BMR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_fitness_details_bmr"
                tools:text="@string/tv_bmr" />

            <TextView
                android:id="@+id/tv_bmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_fitness_details_bmi"
                tools:text="@string/tv_bmi" />

            <TextView
                android:id="@+id/tv_step_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_fitness_details_steps"
                tools:text="@string/tv_steps" />
        </android.support.constraint.ConstraintLayout>

        <!--</android.support.constraint.ConstraintLayout>-->
</ScrollView>